[project]
name = "humanoid-general-motion-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.8"
dependencies = [
    "imageio[ffmpeg]>=2.35.1",
    "ipdb>=0.13.13",
    "matplotlib>=3.7.5",
    "mujoco>=3.2.3",
    "mujoco-python-viewer>=0.1.4",
    "numpy==1.23.0",
    "opencv-python>=4.7.0.72",
    "pydelatin>=0.2.8",
    "scipy>=1.10.1",
    "torch==2.4",
    "torchaudio==2.4",
    "torchvideo>=0.0.0",
    "tqdm>=4.67.1",
]
